force-app/main/default/objects/blng__RevenueAgreement__c/blng__RevenueAgreement__c.object-meta.xml
<CustomObject>
    <label>Revenue Agreement</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Revenue Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>