force-app/main/default/objects/blng__RevenueAgreement__c/fields/blng__Account__c.field-meta.xml
<CustomField>
    <fullName>blng__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountRevenueAgreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>