force-app/main/default/objects/blng__RevenueAgreement__c/fields/blng__TotalAllocatedRevenueAmtBookings__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalAllocatedRevenueAmtBookings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Revenue Allocation Amt(Bookings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>