force-app/main/default/objects/blng__RevenueAgreement__c/fields/blng__TotalRevenueBookings__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalRevenueBookings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Transaction Amt(Bookings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>