force-app/main/default/objects/blng__RevenueAgreement__c/fields/blng__TotalRevenueExpectedAmtBookings__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalRevenueExpectedAmtBookings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Revenue Expected Amt(Bookings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>