force-app/main/default/objects/blng__RevenueAgreement__c/fields/blng__TotalRevenueMostLikelyAmtBillings__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalRevenueMostLikelyAmtBillings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Revenue Most Likely Amt(Billings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>